<resources>
    <string name="app_name">Covider</string>
    <string name="title_login">Covider Login</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_map">Map</string>
    <string name="title_visits">Visits</string>
    <string name="title_health_check">Health Check</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="usc_id">USC ID</string>
    <string name="have_account">Have an account?</string>
    <string name="need_account">Need an account?</string>
    <string name="add_new_visit">Add a New Visit</string>
    <string name="add_visit">Add Visit</string>
    <string name="add_visit_building">Add a visit to this building</string>
    <string name="building">Building</string>
    <string name="class_visit">Is this visit for a recurring class?</string>
    <string name="class_code">Enter class code with format DEPT 123</string>
    <string name="select_building">Select Building</string>
    <string name="select_start_time">Select a Start Time</string>
    <string name="select_end_time">Select an End Time</string>
    <string name="select_class_days">Select Recurring Class Days</string>
    <string name="select_safety_measures">Please select which COVID safety measures are taken at this location</string>
    <string name="is_hand_sanitizer">Is there hand sanitizer provided?</string>
    <string name="is_wearing_masks">How many people are wearing masks?</string>
    <string name="see_list">See List of Buildings</string>
    <string name="risk_level">Risk Level</string>
    <string name="entry_requirements">Entry Requirements</string>
    <string name="mask_recommendation">Masks are recommended but not required.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="instructor_switch_text">I am an Instructor at USC</string>
    <string name="title_activity_building_info">Building Info</string>

    <string name="text_email">Email: </string>
    <string name="text_usc_id">USC ID: </string>
    <string name="text_courses">Courses</string>
    <string name="text_health_reports">Health Reports</string>
    <string name="text_contact_tracing">Contact Tracing Notifications</string>
    <string name="text_instructor">"Instructor(s): "</string>
    <string name="logout">Logout</string>
    <string name="text_students">Students</string>
    <string name="text_course_health_reports">Course Health Reports</string>

    <!-- Attestation Form -->
    <string name="symptoms_header">Symptoms</string>
    <string name="test_results_header">Test Result</string>
    <string name="submit_header">Verify</string>
    <string name="submit_button">Submit</string>

    <string name="chills_or_fever">Chills or Fever of 100 degrees or higher</string>
    <string name="taste_or_smell">Loss of Taste or Smell</string>
    <string name="soreness_headaches_fatigue">Muscle Soreness or Headaches or Fatigue</string>
    <string name="cough_nose_throat">Cough or Runny Nose or Sore Throat or Congestion</string>
    <string name="breathing">Difficulty Breathing or Shortness of Breath</string>
    <string name="conjunctivitis">Conjunctivitis (inflammation of eye including redness, itching and tearing) ALONG WITH feeling feverish</string>
    <string name="gi_symptoms">GI symptoms such as Abdominal Pain or Diarrhea or Nausea or Vomiting</string>

    <string name="positive_result">I received a positive test result</string>
    <string name="verify_attestation">I attest that my answer to the above wellness assessment questions are accurate</string>
    <string name="upload_heath_report">Upload Heath Report</string>


</resources>