<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_maps">

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.covider.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_visits"
        android:name="com.example.covider.visits.VisitsFragment"
        android:label="@string/title_visits"
        tools:layout="@layout/fragment_visits" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.covider.ProfileFragment"
        android:label="@string/title_profile" />


</navigation>