<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".visits.AddVisitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="12dp"
        android:paddingRight="24dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/building_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_building"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/start_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_start_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/end_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_end_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_add_building_visit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/add_visit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>