<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:fillViewport="true">-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Name"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="UserType" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp" />

                <TableLayout
                    android:id="@+id/table_userdata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/text_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/text_email" />

                        <TextView
                            android:id="@+id/view_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="TextView" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/text_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/text_usc_id" />

                        <TextView
                            android:id="@+id/view_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="TextView" />

                    </TableRow>
                </TableLayout>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/text_courses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_courses"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="70dp">
                    <LinearLayout
                        android:id="@+id/table_courses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" />
                </ScrollView>

                <Space
                    android:layout_width="1dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/text_health_reports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_health_reports"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="70dp">
                    <LinearLayout
                        android:id="@+id/table_health_reports"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical" />
                </ScrollView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_upload_health_reports"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="Upload Heath Report" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/logout" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="50dp" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_profile_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/login" />
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
<!--</ScrollView>-->